--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires      = ["setuptools>=61.0.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "casd_secure_hub"
+name = "casd_hub"
 version = "0.0.1"
 description = "GUI allows user to connect to a remote server"
 readme = "README.md"
@@ -13,17 +17,43 @@ classifiers = [
 keywords = ["casd"]
 requires-python = ">=3.9"
 
-dependencies = ["pandas >= 2.2.0",
-                 "yfinance",
-                 'tomli; python_version < "3.13"']
+dependencies = ["PyQt6" ]
 
     [project.optional-dependencies]
     build = ["build", "twine"]
     dev = ["black", "bumpver", "isort", "mypy", "pytest"]
 
     [project.scripts]
-    stock_catcher = "stock_catcher.__main__:main"
+    start_hub = "casd_hub.__main__:main"
 
     [project.urls]
-    repository    = "https://github.com/pengfei99/py-packaging"
-    documentation = "https://github.com/pengfei99/py-packaging/blob/main/docs/packaging_python_scripts.md"
+    repository    = "https://github.com/pengfei99/PyInstallerTutorial"
+    documentation = "https://github.com/pengfei99/PyInstallerTutorial"
+
+[tool.bumpver]
+current_version = "1.1.0"
+version_pattern = "MAJOR.MINOR.PATCH"
+commit_message  = "bump version {old_version} -> {new_version}"
+commit          = true
+tag             = true
+push            = false
+
+    [tool.bumpver.file_patterns]
+    "pyproject.toml" = [
+        'current_version = "{version}"',
+        'version = "{version}"',
+    ]
+    "src/casd_hub/__init__.py" = ["{version}"]
+
+[tool.isort]
+profile                   = "black"
+import_heading_stdlib     = "Standard library imports"
+import_heading_thirdparty = "Third party imports"
+import_heading_firstparty = "Reader imports"
+
+[tool.mypy]
+strict = true
+
+    [[tool.mypy.overrides]]
+    module                 = "casd_hub"
+    ignore_missing_imports = true
